fix(resource-filters): fix vertical alignment of dropdown menu

--- a/src/resource-filters.css
+++ b/src/resource-filters.css
@@ -8,7 +8,7 @@
   padding: 20px;
   position: absolute;
   right: 0;
-  top: 40px;
+  top: 42px;
   width: calc(var(--width) * 0.4);
 }
 .filters-inner h2 {
